---------------------------------------------------------------------------------------------------
Version: 1.2.20
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.2.19
Date: 2025-04-14
  Changes:
    - Updated Ukrainian localization.
---------------------------------------------------------------------------------------------------
Version: 1.2.18
Date: 2025-04-10
  Changes:
    - Modified PlanetsLib.borrow_music() to allow the copying of music to/from "space-platform."
---------------------------------------------------------------------------------------------------
Version: 1.2.17
Date: 2025-04-03
  Info:
    - Added Space Age tag.
---------------------------------------------------------------------------------------------------
Version: 1.2.16
Date: 2025-03-18
  Changes:
    - Incompatility mark added for MT-lib.
---------------------------------------------------------------------------------------------------
Version: 1.2.15
Date: 2025-03-16
  Changes:
    - Performance improvement to the cargo pod restriction technology feature.
---------------------------------------------------------------------------------------------------
Version: 1.2.14
Date: 2025-03-16
  Changes:
    - If the 'type = "nothing"' effect is removed from a given cargo drops technology, PlanetsLib will no longer enforce that this technology must be researched to perform cargo drops.
---------------------------------------------------------------------------------------------------
Version: 1.2.13
Date: 2025-03-12
  Changes:
    - Compatibility fix to handle the case where the vanilla lab has duplicate science packs listed in its inputs.
---------------------------------------------------------------------------------------------------
Version: 1.2.12
Date: 2025-03-03
  Graphics:
    - Fixed positioning of corner icons in discovery technologies.
  Locale:
    - Russian locale update.